Bug 211270 InMemoryDataSource::Init doesn't check the return value of PL_DHashTableInit r=tingley sr=dbaron